--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "பாடல் புத்தகம்",
+  "short_name": "NJC Songbook",
   "name": "புதிய எருசலேம் பாடல் புத்தகம்",
   "description": "தமிழ் கிறிஸ்தவ பாடல்கள்",
   "icons": [
